# Memory-Genome-Engine

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICE  PROJECT_STATUS.md  PROJECT_STATUS.ru.md  QUICKSTART.md  QUICKSTART.ru.md  README.md  README.ru.md  SECURITY.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  general_feedback.yml  integration_report.yml
.github/workflows/: ci.yml  release.yml
crates/mge-cli/: Cargo.toml
crates/mge-cli/src/: app_service.rs  host_integration.rs  main.rs
crates/mge-cli/src/tui/: app.rs  banner.rs  i18n.rs  input.rs  mod.rs  status_badge.rs  theme.rs
crates/mge-cli/src/tui/screens/: add_memory.rs  benchmark.rs  dashboard.rs  export_import.rs  help.rs  mod.rs  recall.rs  seal.rs  settings.rs  setup.rs  status.rs
crates/mge-cli/src/tui/widgets/: mod.rs  toggle.rs
crates/mge-cli/tests/: cli_smoke.rs
crates/mge-cli/tests/fixtures/mcp/: rebuild_success.json  recall_broad_success.json  recall_focused_success.json  recall_full_scope_success.json  remember_success.json  structured_error.json  validate_failure.json  validate_success.json
crates/mge-core/: Cargo.toml
crates/mge-core/src/: binary.rs  compression.rs  errors.rs  hot.rs  indexes.rs  ingestion.rs  lib.rs  markers.rs  models.rs  packet.rs  pages.rs  retrieval.rs  security.rs  store.rs
crates/mge-core/tests/: core_flow.rs
docs/: ARCHITECTURE.md  ARCHITECTURE.ru.md  BENCHMARKS.md  BENCHMARKS.ru.md  INTEGRATION.md  INTEGRATION.ru.md  MCP.md  MCP.ru.md  RELEASE.md  RELEASE.ru.md  ROADMAP.md  ROADMAP.ru.md  SDK.md  SDK.ru.md  SECURITY.md  SECURITY.ru.md
examples/: agent_host_cli.rs  agent_workflow.md  agent_workflow.ru.md  basic_usage.md  basic_usage.rs  basic_usage.ru.md  mcp_agent_session.jsonl  python_agent_host.py  python_basic_usage.py  typescript_agent_host.ts  typescript_basic_usage.ts
scripts/: build-release.ps1  build-release.sh  demo-local-memory.ps1  demo-local-memory.sh  install-release.ps1  install-release.sh  install.ps1  install.sh  smoke-release.ps1  smoke-release.sh
sdk/python/: README.md  pyproject.toml
sdk/python/mge_sdk/: __init__.py
sdk/typescript/: README.md  package.json
sdk/typescript/src/: mge.ts  node-shims.d.ts
tools/agent-memory-eval/: Cargo.toml
tools/agent-memory-eval/src/: main.rs
