[workspace]
members = [
    "crates/mge-core",
    "crates/mge-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["ECD5A"]
license = "MIT"
repository = ""

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"
tempfile = "3.10"
thiserror = "2.0"
zstd = "0.13"
