[workspace]
members = [
    "crates/mge-core",
    "crates/mge-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["ECD5A"]
license = "MIT"
repository = ""

[workspace.dependencies]
anyhow = "1.0"
argon2 = "0.5"
chacha20poly1305 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
rand = "0.8"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
rmp-serde = "1.3"
tempfile = "3.10"
thiserror = "2.0"
zeroize = "1.8"
zstd = "0.13"
xorf = { version = "0.12", features = ["serde"] }
