[package]
name = "mge-cli"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
default-run = "mge"

[dependencies]
anyhow.workspace = true
clap.workspace = true
mge-core = { path = "../mge-core" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true

[[bin]]
name = "mge"
path = "src/main.rs"

[[bin]]
name = "mge-synthetic-bench"
path = "src/bin/mge-synthetic-bench.rs"

[[bin]]
name = "mge-corpus-bench"
path = "src/bin/mge-corpus-bench.rs"

[[bin]]
name = "mge-mcp-server"
path = "src/bin/mge-mcp-server.rs"
