[package]
name = "mge-core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
rmp-serde.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
zstd.workspace = true

[dev-dependencies]
tempfile.workspace = true
