[package]
name = "mge-core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
argon2.workspace = true
chacha20poly1305.workspace = true
chrono.workspace = true
rand.workspace = true
rmp-serde.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
zeroize.workspace = true
zstd.workspace = true
xorf.workspace = true

[dev-dependencies]
tempfile.workspace = true
