[package]
name = "mge-agent-memory-eval"
version = "0.1.1"
edition = "2021"
rust-version = "1.95"
authors = ["ECD5A"]
license = "Apache-2.0"
publish = false

[workspace]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
mge-core = { path = "../../crates/mge-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
